fix: z-index

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 999999;
 
   .color-picker-content {
     background: var(--secondary);
